fixed overflow

--- a/hadji_index.css
+++ b/hadji_index.css
@@ -42,15 +42,13 @@ header {
 } */
 
 .content {
-  /* float: none; */
-  /* position: relative; */
+  min-height: 99%;
+  /* height: auto; */
+  place-items: center;
   border: 2px solid orangered;
-  /* overflow:hidden; */
-  /* height: max-content; */
-  /* grid-area: c;
 }
 
-.footer {
+/* .footer {
   margin-bottom: 0;
   position: relative; 
   display: block;
@@ -61,17 +59,8 @@ header {
     rgba(255, 255, 255, 1) 100%
   );
   border-top: 1px solid var(--background);
-}
+} */
 
-.content {
-  height: 200vh;
-  /* background-image: url(../Hadjizlatev/Images/turnovo1.JPG); */
-  background-color: white;
-  background-blend-mode: multiply;
-  background-size: cover;
-  /* display: grid; */
-  place-items: center;
-}
 
 header {
   /* background: var(--background); */
@@ -175,6 +164,7 @@ nav a:hover {
 }
 
 .intro {
+  height: auto;
   padding: 1em 4em;
   text-align: justify;
 }
@@ -242,6 +232,7 @@ nav a:hover {
 
 .sections {
   position: relative;
+  height: auto;
   /* margin: 1.5em; */
   display: flex;
   flex-direction: column;
@@ -253,7 +244,12 @@ section {
   position: relative;
 }
 
+.proj {
+  height: auto;
+}
+
 .projects {
+  height: auto;
   background: rgb(255, 255, 255);
   background: linear-gradient(
     0deg,
@@ -266,6 +262,7 @@ section {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
   gap: 0.4em;
+  display: contents; 
 }
 
 .project-h2 {
@@ -372,4 +369,13 @@ section {
     opacity: 1;
     position: relative;
   }
+
+ .projects {
+  display: grid;
+  position: absolute;
+  padding: 1em;
+  grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+  gap: 0.4em;
+}
+
 }
